client/src/App.css
/* .App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}


@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
} */

@import url('https://fonts.googleapis.com/css?family=Lobster|Montserrat&display=swap');

body {
  background-color: aqua;
  overflow-y: scroll;
  animation: Home-page 1s ease-in forwards;
}

.fade-enter {
  opacity: 0;
}

.fade-enter .fade-enter-active {
  opacity: 1;
  transition: opacity 250ms ease-in;
}

#landing-page-container {
  background-color: aliceblue;
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

#circle {
  border-radius: 100%;
  background-color: white;
  position: fixed;
  z-index: 2;
  animation: Landing-page 0.5s ease-in forwards;
}

#landing-page-image {
  position: absolute;
  opacity: 0.2;
  animation: Moving-background 10s ease forwards;
}

.logo {
  font-family: 'Lobster', cursive;
  font-size: 5rem;
  margin: 0;
  color: aqua;
}

.subtitle {
  font-family: 'Montserrat', sans-serif;
  color: rgb(11, 160, 160);
  align-self: flex-end;
  margin: 0 0 0 9rem;
}

#home-page-container {
  animation: Home-page 1s ease-in forwards;
}

@keyframes Landing-page {
  0% {
    opacity: 0;
    transform: scale(0)
  }
  50% {
    opacity: 100%;
    transform: scale(1.5)
  }
}

@keyframes Moving-background {
  from {
    left: -200px;
    top: -200px;
  }
  to {
    left: 0;
    top: 0;
  }
}

@keyframes Home-page {
  from {
    opacity: 0;
  }
  to {
    opacity: 100%;
  }
}

